# qelement

./: .gitmodules  CMakeLists.txt  README.md
assets/: assets.qrc  qelement.desktop
flatpak/: .gitignore  build  gdn.magiruuvelvet.QElement.appdata.xml  gdn.magiruuvelvet.QElement.yml  qelement.sh
i18n/: ja_JP.ts  translations.qrc
src/: CMakeLists.txt  browserwindow.cpp  browserwindow.hpp  configmanager.cpp  configmanager.hpp  desktopnotification.cpp  desktopnotification.hpp  elementurlscheme.cpp  elementurlscheme.hpp  globals.hpp  main.cpp  paths.cpp  paths.hpp  webenginepage.cpp  webenginepage.hpp  webengineview.cpp  webengineview.hpp
tools/: create-translation  update-translations
